--- a/translations/it.json
+++ b/translations/it.json
@@ -3,7 +3,7 @@
   "hero_subtitle": "Benvenuto nel mio portfolio. Esplora i miei progetti e le mie competenze.",
   "hero_button": "Vedi il mio lavoro",
   "about_title": "Chi Sono",
-  "about_text": "Sono uno sviluppatore e ingegnere appassionato con esperienza in sistemi embedded, IoT e sviluppo web.",
+  "about_text": "Sono un ingegnere informatico appassionato con esperienza in cybersecurity, sistemi embedded, IoT e sviluppo web.",
   "projects_title": "I miei Progetti",
   "project1_title": "Progetto 1",
   "project1_desc": "Una breve descrizione del Progetto 1.",
