--- a/translations/en.json
+++ b/translations/en.json
@@ -3,7 +3,7 @@
   "hero_subtitle": "Welcome to my portfolio. Explore my projects and skills.",
   "hero_button": "View My Work",
   "about_title": "About Me",
-  "about_text": "I am a passionate developer and engineer with experience in embedded systems, IoT, and web development.",
+  "about_text": "I am a passionate software engineer with experience in cybersecturity, embedded systems, IoT, and web development.",
   "projects_title": "My Projects",
   "project1_title": "Project 1",
   "project1_desc": "A brief description of Project 1.",
