Add formation and experience sections

--- a/translations/en.json
+++ b/translations/en.json
@@ -21,5 +21,43 @@
   "project2": "Project 2",
   "contacts": "Contact",
   "copyright": "© 2025 Matteo Veroni. All rights reserved.",
-  "contact_me": "Contact Me"
+  "contact_me": "Contact Me",
+  "timeline_master": "Master Degree in Computer Science Engineering",
+  "timeline_master_location": "University of Modena and Reggio Emilia",
+  "timeline_master_duration": "2024 - Present",
+  "timeline_master_fields": "Fields: Cybersecurity, Embedded Systems, ICT, Network Design, Software Development, Automation",
+  "timeline_bachelor": "Bachelor's Degree in Computer Science Engineering",
+  "timeline_bachelor_location": "University of Modena and Reggio Emilia",
+  "timeline_bachelor_duration": "2021 - 2024",
+  "timeline_bachelor_grade": "Final Grade: Summa Cum Laude",
+  "timeline_bachelor_thesis": "Thesis: EHRforEquips - A clinical data management system for freelance doctors",
+  "timeline_bachelor_fields": "Fields: Network design, Cybersecurity, Software Development, Electronics, Automation",
+  "timeline_highschool": "High School Diploma - Scientific High School (Applied Sciences)",
+  "timeline_highschool_location": "Liceo Scientifico Statale Manfredo Fanti, Carpi",
+  "timline_highschool_duration": "2016 - 2021",
+  "timeline_highschool_grade": "Final Grade: 100/100",
+  "timeline_giardino": "Giardino delle Imprese",
+  "timeline_giardino_location": "Fondazione Golinelli, Bologna",
+  "timeline_giardino_duration": "Jul 2019 - Sep 2019",
+  "timeline_giardino_fields": "Informal school of entrepreneurial culture",
+  "timeline_title": "My Formation",
+  "experience_title": "Work & Volunteer Experience",
+  "experience_erelief": "Chief Technology Officer",
+  "experience_erelief_location": "eRelief, Bologna",
+  "experience_erelief_duration": "Aug 2019 - Mar 2022",
+  "experience_erelief_bullet1": "Staff training and R&D",
+  "experience_erelief_bullet2": "Business project presentations (international)",
+  "experience_erelief_bullet3": "Solutions for museum accessibility for the visually impaired",
+  "learn_more": "Learn More",
+  "experience_acr": "Catechist & ACR Youth Educator",
+  "experience_acr_location": "Carpi, Italy",
+  "experience_acr_duration": "Jan 2022 - Present",
+  "experience_acr_bullet1": "Educator for children aged 8-12",
+  "experience_acr_bullet2": "Parent relationship management",
+  "experience_acr_bullet3": "Summer camp service (overnight stays)",
+  "experience_afterschool": "After-School Teacher",
+  "experience_afterschool_location": "Carpi, Italy",
+  "experience_afterschool_duration": "Sep 2024 - Feb 2025",
+  "experience_afterschool_bullet1": "Tutored children aged 12-14",
+  "experience_afterschool_bullet2": "Homework assistance and mentoring"
 }
