--- a/translations/it.json
+++ b/translations/it.json
@@ -21,5 +21,43 @@
   "project2": "Progetto 2",
   "contacts": "Contatti",
   "copyright": "© 2025 Matteo Veroni. Tutti i diritti riservati.",
-  "contact_me": "Contattami"
+  "contact_me": "Contattami",
+  "timeline_master": "Laurea Magistrale in Ingegneria Informatica",
+  "timeline_master_location": "Università di Modena e Reggio Emilia",
+  "timeline_master_duration": "2024 - Oggi",
+  "timeline_master_fields": "Campi: Cybersecurity, sistemi embedded, ICT, Network Design, Software Development, Automazione",
+  "timeline_bachelor": "Laurea Triennale in Ingegneria Informatica",
+  "timeline_bachelor_location": "Università di Modena e Reggio Emilia",
+  "timeline_bachelor_duration": "2021 - 2024",
+  "timeline_bachelor_grade": "Voto finale: 110 e lode",
+  "timeline_bachelor_thesis": "Tesi: EHRforEquips - Un gestionale di dati clinici di pazienti rivolto ai medici liberi professionisti",
+  "timeline_bachelor_fields": "Campi: Network design, Cybersecurity, Software Development, Elettronica, Automazione",
+  "timeline_highschool": "Diploma di scuola superiore - Liceo Scientifico opzione Scienze Applicate",
+  "timeline_highschool_location": "Liceo Scientifico Statale Manfredo Fanti, Carpi",
+  "timline_highschool_duration": "2016 - 2021",
+  "timeline_highschool_grade": "Voto finale: 100/100",
+  "timeline_giardino": "Giardino delle Imprese",
+  "timeline_giardino_location": "Fondazione Golinelli, Bologna",
+  "timeline_giardino_duration": "Luglio 2019 - Settembre 2019",
+  "timeline_giardino_fields": "Scuola informale di cultura imprenditoriale",
+  "timeline_title": "La mia formazione",
+  "experience_title": "Esperienze lavorative e di volontariato",
+  "experience_erelief": "Chief Technology Officer",
+  "experience_erelief_location": "eRelief, Bologna",
+  "experience_erelief_duration": "Aug 2019 - Mar 2022",
+  "experience_erelief_bullet1": "Addestramento staff e R&D",
+  "experience_erelief_bullet2": "Presentazione in ambienti internazionali del progetto",
+  "experience_erelief_bullet3": "Soluzioni di accessibilità museale per persone con disabilità visiva",
+  "learn_more": "Mostra di più",
+  "experience_acr": "Educatore ACR e Catechista",
+  "experience_acr_location": "Carpi, Italia",
+  "experience_acr_duration": "Gennaio 2022 - Oggi",
+  "experience_acr_bullet1": "Educatore di ragazzi di età 8-12",
+  "experience_acr_bullet2": "Gestione delle relazioni coi genitori",
+  "experience_acr_bullet3": "Servizio ai campi estivi (con pernotto)",
+  "experience_afterschool": "Insegnante di doposcuola",
+  "experience_afterschool_location": "Carpi, Italia",
+  "experience_afterschool_duration": "Settembre 2024 - Febbraio 2025",
+  "experience_afterschool_bullet1": "Ho seguito ragazzi di età 12-14",
+  "experience_afterschool_bullet2": "Aiuto nello svolgimento dei compiti e insegnamento"
 }
