--- a/translations/it.json
+++ b/translations/it.json
@@ -59,5 +59,8 @@
   "experience_afterschool_location": "Carpi, Italia",
   "experience_afterschool_duration": "Settembre 2024 - Febbraio 2025",
   "experience_afterschool_bullet1": "Ho seguito ragazzi di età 12-14",
-  "experience_afterschool_bullet2": "Aiuto nello svolgimento dei compiti e insegnamento"
+  "experience_afterschool_bullet2": "Aiuto nello svolgimento dei compiti e insegnamento",
+  "nav_about": "Chi sono?",
+  "nav_projects": "Progetti",
+  "nav_contact": "Contattami"
 }
