Add translation of projects pages

--- a/translations/en.json
+++ b/translations/en.json
@@ -57,13 +57,54 @@
   "nav_about": "About me",
   "nav_projects": "Projects",
   "nav_contact": "Contacts",
-  "kotlin-brief": "A Kotlin-based core environment for learning.",
+  "kotlin-brief": "A repository of exercises in Kotlin, adapted from nbicocchi/java-core.",
   "github": "View on GitHub",
-  "ehrforequips-brief": "Electronic Health Records system for freelance doctors.",
+  "ehrforequips-brief": "A management software for equips of freelance doctors.",
   "real-time-coin-acceptor-brief": "A real-time coin acceptor powered by Raspberry Pi Pico, FreeRTOS and Micro-ROS.",
   "pong-brief": "A classic Pong game implemented using pthreads and ncurses.",
   "quizmaker-brief": "A tool for creating HTML quizzes.",
   "aai_assignment-brief": "Reinforcement Learning agent for a simulated production system.",
   "kotetris-brief": "A Kotlin Multiplatform version of the famous Tetris game.",
-  "personal-website-brief": "The source code for this website."
+  "personal-website-brief": "The source code for this website.",
+  "project-overview": "Project Overview",
+  "kotlin-long": "This repository is an adaptation of the exercises provided in <a href=\"https://github.com/nbicocchi/java-core/tree/main\" target=\"_blank\">nbicocchi/java-core</a> for the Kotlin programming language. It contains exercises covering basics, object-oriented design, data structures, generics, functional programming, exceptions, I/O and multi-threading.",
+  "features": "Features",
+  "kotlin-bullet1": "Exercises for Kotlin basics",
+  "kotlin-bullet2": "Object-oriented design exercises",
+  "kotlin-bullet3": "Data structures and collections",
+  "kotlin-bullet4": "Generic data structures",
+  "kotlin-bullet5": "Functional programming exercises",
+  "kotlin-bullet6": "Exception handling",
+  "kotlin-bullet7": "I/O framework exercises",
+  "kotlin-bullet8": "Multi-threading exercises",
+  "technologies-used": "Technologies Used",
+  "ehrforequips-long": "EHRforEquips is a multiplatform, portable software designed for freelance doctors working in multiple structures. It follows a plugin architecture, allowing doctors to customize their workflow by adding preferred plugins. The software is compatible with Linux, Windows and MacOS.",
+  "ehrforequips-bullet1": "Plugin architecture for customization",
+  "ehrforequips-bullet2": "Multiplatform support (Linux, Windows, MacOS)",
+  "ehrforequips-bullet3": "Patient and visit management",
+  "ehrforequips-bullet4": "Easy plugin integration",
+  "pong-long": "A terminal-based Pong game using multi-threading and ncurses for rendering.",
+  "pong-bullet1": "Multiplayer support",
+  "pong-bullet2": "Real-time rendering",
+  "pong-bullet3": "Score tracking",
+  "quizmaker-long": "QuizMaker is a tool that converts questions in JSON format to an interactive HTML quiz. It supports single-solution questions and is designed for easy integration and testing.",
+  "quizmaker-question1": "JSON input support",
+  "quizmaker-question2": "Interactive HTML output",
+  "quizmaker-question3": "Test-driven development",
+  "quizmaker-question4": "Unit and integration testing",
+  "real-time-coin-acceptor-long": "This project implements a real-time coin acceptor using a Raspberry Pi Pico, FreeRTOS, and Micro-ROS. It includes C++ code for the Pico, Python calibration utilities, and a Python frontend. The system is designed for real-time coin detection and value publishing via Micro-ROS topics.",
+  "real-time-coin-acceptor-bullet1": "Real-time coin detection",
+  "real-time-coin-acceptor-bullet2": "Micro-ROS integration",
+  "real-time-coin-acceptor-bullet3": "Python calibration utilities",
+  "real-time-coin-acceptor-bullet4": "FreeRTOS-based firmware",
+  "real-time-coin-acceptor-bullet5": "Raspberry Pi Pico support",
+  "aai_assignment-long": "This assignment applies Reinforcement Learning (RL) to optimize a simulated production system. It uses Stable-Baselines3's PPO algorithm to train an agent in a SimPy-based production environment.",
+  "aai_assignment-bullet1": "RL-based optimization",
+  "aai_assignment-bullet2": "Simulated production environment",
+  "aai_assignment-bullet3": "Performance metrics",
+  "aai_assignment-bullet4": "Stable-Baselines3 PPO agent",
+  "kotetris-long": "KoTetris is a cross-platform Tetris game built with Kotlin Multiplatform.",
+  "kotetris-bullet1": "Cross-platform support",
+  "kotetris-bullet2": "Customizable controls",
+  "kotetris-bullet3": "Score tracking"
 }
