--- a/translations/it.json
+++ b/translations/it.json
@@ -71,5 +71,45 @@
   "quizmaker-brief": "Un tool per creare quiz HTML.",
   "aai_assignment-brief": "Un agente che sfrutta Reinforcement Learning per risolvere un problema relativo a un sistema produttivo simulato.",
   "kotetris-brief": "Una versione scritta attraverso Kotlin Multiplatform del gioco Tetris.",
-  "personal-website-brief": "Il codice sorgente di questo sito."
+  "personal-website-brief": "Il codice sorgente di questo sito.",
+  "project-overview": "Descrizione del progetto",
+  "kotlin-long": "Il repository contiene un'adattamento degli esercizi che si possono trovare su https://github.com/nbicocchi/java-core/ per il linguaggio di programmazione Kotlin. Gli esercizi coprono le basi, la programmazione object-oriented, le strutture dati, la programmazione funzionale, le eccezioni, l'I/O e il multi-threading.",
+  "features": "Caratteristiche",
+  "kotlin-bullet1": "Esercizi sulle basi di Kotlin",
+  "kotlin-bullet2": "Esercizi sulla programmazione a oggetti",
+  "kotlin-bullet3": "Collections e data structures",
+  "kotlin-bullet4": "Strutture dati generiche",
+  "kotlin-bullet5": "Esercizi sulla programmazione funzionale",
+  "kotlin-bullet6": "Gestione delle eccezioni",
+  "kotlin-bullet7": "Esercizi su I/O",
+  "kotlin-bullet8": "Esercizi su multithreading",
+  "technologies-used": "Tecnologie usate",
+  "ehrforequips-long": "EHRforEquips è un software multipiattaforma e protabile progettato per le equipe di medici liberi professionisti che lavorano in più ospedali. Il suo design prevede un'architettura a plugin, che permette ai dottori di modificare il loro utilizzo dell'applicazione semplicemente cambiando i plugin. Il software è compatibile con Linux, Windows e MacOS.",
+  "ehrforequips-bullet1": "Architettura a plugin personalizzabile",
+  "ehrforequips-bullet2": "Supporto multipiattaforma (Linux, Windows, MacOS)",
+  "ehrforequips-bullet3": "Gestione dei dati clinici",
+  "ehrforequips-bullet4": "Plugin facili da integrare",
+  "pong-long": "Una versione da terminale di pong che usa multi-threading ed ncurses per il rendering",
+  "pong-bullet1": "Multiplayer",
+  "pong-bullet2": "Rendering real-time",
+  "pong-bullet3": "Punteggi",
+  "quizmaker-long": "QuizMaker è uno strumento che converte domande in formato JSON in un quiz HTML interattivo. Supporta delle domande a risposta multipla.",
+  "quizmaker-question1": "Lettura input in formato JSON",
+  "quizmaker-question2": "Quiz HTML interattivo",
+  "quizmaker-question3": "Test-driven development",
+  "quizmaker-question4": "Unit testing e integration testing",
+  "real-time-coin-acceptor-bullet1": "Rilevamento della moneta in real-time",
+  "real-time-coin-acceptor-bullet2": "Integrazione con Micro-ROS",
+  "real-time-coin-acceptor-bullet3": "Utilities Python per la calibrazione",
+  "real-time-coin-acceptor-bullet4": "FreeRTOS-based firmware",
+  "real-time-coin-acceptor-bullet5": "Supporto per Raspberry Pi Pico",
+  "aai_assignment-long": "Questo progetto applica i principi di Reinforcement Learning (RL) per ottimizzare un sistema produttivo simulato. Utilizza l'implementazione di Stable-Baselines3's dell'algoritmo PPO per allenare un agente in un ambiente produttivo simulato attraverso SimPy.",
+  "aai_assignment-bullet1": "Ottimizzazione basata su RL",
+  "aai_assignment-bullet2": "Simulazione di ambiente produttivo",
+  "aai_assignment-bullet3": "Misure di performance",
+  "aai_assignment-bullet4": "Agente PPO",
+  "kotetris-long": "KoTetris è una versione cross-platform del gioco Tetris sviluppata attraverso Kotlin Multiplatform.",
+  "kotetris-bullet1": "Cross-platform",
+  "kotetris-bullet2": "Controlli personalizzabili",
+  "kotetris-bullet3": "Punteggi"
 }
