--- a/translations/it.json
+++ b/translations/it.json
@@ -116,5 +116,22 @@
   "contact_form_title": "Contattami",
   "direct_email_title": "Oppure scrivimi direttamente",
   "email_success": "Email inviata con successo!",
-  "email_error": "Invio email fallito. Per favore riprova."
+  "email_error": "Invio email fallito. Per favore riprova.",
+  "privacy_title": "Informativa sulla Privacy",
+  "privacy_data_collection": "Raccolta dei Dati",
+  "privacy_data_collection_text": "Raccogliamo il tuo nome, cognome e indirizzo email solo quando ci contatti tramite il nostro sito web. Questi dati vengono utilizzati esclusivamente per rispondere alle tue richieste.",
+  "privacy_legal_basis": "Base Legale e Conservazione",
+  "privacy_legal_basis_text": "Trattiamo i tuoi dati sulla base del tuo consenso. I dati vengono conservati per 12 mesi dopo la tua ultima interazione, a meno che non richieda la cancellazione.",
+  "privacy_third_party": "Responsabili Esterni del Trattamento",
+  "privacy_third_party_text": "I tuoi dati vengono condivisi con EmailJS (per l'inoltro dei messaggi) e Google (infrastruttura email), entrambi conformi al GDPR. I dati possono essere trasferiti al di fuori dell'UE in conformità con le Clausole Contrattuali Standard.",
+  "privacy_user_rights": "I Tuoi Diritti",
+  "privacy_user_rights_text": "Hai il diritto di accedere, correggere, cancellare o limitare il trattamento dei tuoi dati, nonché il diritto alla portabilità dei dati e a revocare il consenso. Per esercitare questi diritti, contattaci all'indirizzo veronimatteo.personalwebsite@gmail.com.",
+  "privacy_security": "Sicurezza",
+  "privacy_security_text": "Proteggiamo i tuoi dati con misure tecniche e organizzative appropriate e ti informeremo in caso di violazioni dei dati.",
+  "privacy_cookies": "Cookie",
+  "privacy_cookies_text": "Questo sito web non utilizza cookie o tecnologie di tracciamento.",
+  "privacy_updates": "Aggiornamenti",
+  "privacy_updates_text": "Potremmo aggiornare questa informativa; le modifiche verranno pubblicate qui.",
+  "privacy_contact": "Contatti",
+  "privacy_contact_text": "Per domande sulla privacy, contatta veronimatteo.personalwebsite@gmail.com."
 }
