typo in translations

--- a/translations/en.json
+++ b/translations/en.json
@@ -120,7 +120,7 @@
   "privacy_third_party": "Third-Party Processors",
   "privacy_third_party_text": "Your data is shared with EmailJS (for message forwarding) and Google (email infrastructure), both of which are GDPR-compliant. Data may be transferred outside the EU under Standard Contractual Clauses.",
   "privacy_user_rights": "Your Rights",
-  "privacy_user_rights_text": "You have the right to access, correct, delete, or restrict processing of your data, as well as the right to data portability and to withdraw consent. To exercise these rights, contact us at veronimatteo.personalwebsite@gmail.com.",
+  "privacy_user_rights_text": "You have the right to access, correct, delete, or restrict processing of your data, as well as the right to data portability and to withdraw consent. To exercise these rights, contact us at veronimatteo1.personalwebsite@gmail.com.",
   "privacy_security": "Security",
   "privacy_security_text": "We protect your data with appropriate technical and organizational measures and will notify you of any data breaches.",
   "privacy_cookies": "Cookies",
@@ -128,5 +128,5 @@
   "privacy_updates": "Updates",
   "privacy_updates_text": "We may update this policy; changes will be posted here.",
   "privacy_contact": "Contact",
-  "privacy_contact_text": "For privacy inquiries, contact veronimatteo.personalwebsite@gmail.com."
+  "privacy_contact_text": "For privacy inquiries, contact veronimatteo1.personalwebsite@gmail.com."
 }
