--- a/translations/it.json
+++ b/translations/it.json
@@ -125,7 +125,7 @@
   "privacy_third_party": "Responsabili Esterni del Trattamento",
   "privacy_third_party_text": "I tuoi dati vengono condivisi con EmailJS (per l'inoltro dei messaggi) e Google (infrastruttura email), entrambi conformi al GDPR. I dati possono essere trasferiti al di fuori dell'UE in conformità con le Clausole Contrattuali Standard.",
   "privacy_user_rights": "I Tuoi Diritti",
-  "privacy_user_rights_text": "Hai il diritto di accedere, correggere, cancellare o limitare il trattamento dei tuoi dati, nonché il diritto alla portabilità dei dati e a revocare il consenso. Per esercitare questi diritti, contattaci all'indirizzo veronimatteo.personalwebsite@gmail.com.",
+  "privacy_user_rights_text": "Hai il diritto di accedere, correggere, cancellare o limitare il trattamento dei tuoi dati, nonché il diritto alla portabilità dei dati e a revocare il consenso. Per esercitare questi diritti, contattaci all'indirizzo veronimatteo1.personalwebsite@gmail.com.",
   "privacy_security": "Sicurezza",
   "privacy_security_text": "Proteggiamo i tuoi dati con misure tecniche e organizzative appropriate e ti informeremo in caso di violazioni dei dati.",
   "privacy_cookies": "Cookie",
@@ -133,5 +133,5 @@
   "privacy_updates": "Aggiornamenti",
   "privacy_updates_text": "Potremmo aggiornare questa informativa; le modifiche verranno pubblicate qui.",
   "privacy_contact": "Contatti",
-  "privacy_contact_text": "Per domande sulla privacy, contatta veronimatteo.personalwebsite@gmail.com."
+  "privacy_contact_text": "Per domande sulla privacy, contatta veronimatteo1.personalwebsite@gmail.com."
 }
